--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="hero">
       <div>
         <h3>Ann Arbor, MI</h3>
-        <h1>Resturant & Food Guide</h1>
+        <h1>Restaurant & Food Guide</h1>
         <p>Food news and dining guides from Ann Arbor, MI.</p>
       </div>
     </div>
@@ -66,7 +66,7 @@
         
         <div>
             <h2>AA Foodies</h2>
-            <h1>Learn about the best food and resturants all around Ann Arbor.</h1>
+            <h1>Learn about the best food and restaurants all around Ann Arbor.</h1>
             <p>Follow me as I venture into the world of  foods and fancy restaurants around Ann Arbor.</p>
 
         </div> 
